--- a/build.properties
+++ b/build.properties
@@ -3,4 +3,6 @@ output.. = bin/
 bin.includes = plugin.xml,\
                META-INF/,\
                .,\
-               icons/
+               icons/,\
+               src/
+src.includes = src/
